--- a/Pancasila.html
+++ b/Pancasila.html
@@ -71,6 +71,7 @@
           .accordion-button {
             background-color: #0A2647;
             color: aliceblue;
+            border: 2px solid;
           }
 
           .accordion-body {
@@ -197,6 +198,7 @@
               </div>
             </div>
           </div>
+          <br>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -210,6 +212,7 @@
               </div>
             </div>
           </div>
+          <br>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -223,6 +226,7 @@
               </div>
             </div>
           </div>
+          <br>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingFour">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -236,6 +240,7 @@
               </div>
             </div>
           </div>
+          <br>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingFive">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
