--- a/Pancasila.html
+++ b/Pancasila.html
@@ -126,10 +126,10 @@
                         <img src="img/lambang-garuda-pancasila-foto-tangkapan-layar-video-di-rumah-digital-indonesia 1.png" class="d-block w-100" alt="img">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/hari-lahir-pancasila-2020-1-juni 1.png" class="d-block w-100" alt="img">
+                        <img src="img/pncsl 1.png" class="d-block w-100" alt="img">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/lambang-garuda-pancasila-foto-tangkapan-layar-video-di-rumah-digital-indonesia.png" class="d-block w-100" alt="img">
+                        <img src="img/WhatsApp Image 2023-01-08 at 21.41 1.png" class="d-block w-100" alt="img">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -157,9 +157,7 @@
                     
                     <div class="row fs-5">
                         <div class="col-md-6">
-                            <p>Kedudukan Pancasila sebagai dasar negara yang memerlukan pengetahuan dan pemahaman merupakan hasil pemikiran, musyawarah dan mufakat yang dilakukan 
-                              oleh tokoh-tokoh kunci pada masa perjuangan kemerdekaan.Pancasila, ada lima sila atau perintah yang harus diketahui. 
-                              Lima Sila Pancasila pertama kali dibuat pada tanggal 1 Juni 1945 oleh Presiden Republik Indonesia, Soekarno.   
+                            <p>Hallo, selamat datang di MyWebsite, jadi di website ini untuk mengedukasi  
                                 </p>
                         </div>
                         <div class="col-md-6">
