Merubah kata" halaman About and add picture

--- a/Pancasila.html
+++ b/Pancasila.html
@@ -78,6 +78,10 @@
             background-color: #3D2C8D;
             color: rgb(255, 255, 255);
           }
+
+          .text-about {
+            font-size: x-large;
+          }
         </style>
 
 
@@ -99,7 +103,7 @@
                     <a class="nav-link" href="#about">About</a>
                   </li>
                   <li class="nav-item mx-2">
-                    <a class="nav-link" href="#uniqueness">National principle</a>
+                    <a class="nav-link" href="#uniqueness">National Principles</a>
                   </li>
                   <li class="nav-item mx-2">
                     <a class="nav-link" href="#spesies">Conclusion</a>
@@ -156,17 +160,19 @@
                     </div>
                     
                     <div class="row fs-5">
-                        <div class="col-md-6">
-                            <p>Hallo, selamat datang di MyWebsite, jadi di website ini untuk mengedukasi  
-                                </p>
-                        </div>
-                        <div class="col-md-6">
-                            <p>Lima sila yang terkandung dalam sila Pancasila adalah Ketuhanan Yang Maha Esa, Kemanusiaan yang adil dan beradab, 
-                              Persatuan Indonesia, Demokrasi yang berjiwa hikmat dalam refleksi/perwakilan, Keadilan sosial bagi seluruh rakyat Indonesia. 
-                              Nilai-nilai pancasila merupakan pedoman normatif yang berlaku bagi seluruh kegiatan penyelenggaraan pemerintahan. 
-                              Status Pancasila sebagai dasar negara Indonesia berarti bahwa semua peraturan pemerintah harus sesuai dengan Pancasila dan 
-                              tidak boleh bertentangan dengannya.</p>
-                        </div>
+                      <div class="text-about">
+                          <div class="text-center">
+                              <p><strong>Selamat datang di MyWebsite!</strong> Website ini dibuat 
+                                dengan tujuan untuk memberikan informasi dan solusi yang bermanfaat bagi para pengunjung. 
+                                Kami menyediakan berbagai macam informasi tentang Pancasila sebagai dasar negara.
+                                Kami juga menyediakan fitur gambar dan video, sehingga para pengunjung tidak bosan untuk melihat informasi atau untuk belajar. <br><br>
+                                Kami berupaya untuk selalu menyediakan informasi yang akurat, serta memberikan solusi yang inovatif dan efektif. 
+                                Kami berharap Anda dapat menemukan apa yang 
+                                Anda cari di website kami dan merasa puas dengan layanan yang kami berikan. <br><br><strong>Terima kasih telah berkunjung ke MyWebsite.</strong>
+
+                                  </p>
+                          </div>
+                      </div>
                     </div>
                 </div>
             </div>
