Mengganti commant, class dan id

--- a/Pancasila.html
+++ b/Pancasila.html
@@ -28,7 +28,7 @@
             background-size: 100px;
           }
 
-          .spesies {
+          .rangkuman {
             background: url(img/oriental-tiles.png);
           }
 
@@ -54,7 +54,7 @@
             padding-bottom: 25%;
           }
             
-          .spesies h2 {
+          .rangkuman h2 {
             color: white;
           }
 
@@ -103,10 +103,10 @@
                     <a class="nav-link" href="#about">About</a>
                   </li>
                   <li class="nav-item mx-2">
-                    <a class="nav-link" href="#uniqueness">National Principles</a>
+                    <a class="nav-link" href="#penjelasan">National Principles</a>
                   </li>
                   <li class="nav-item mx-2">
-                    <a class="nav-link" href="#spesies">Conclusion</a>
+                    <a class="nav-link" href="#rangkuman">Conclusion</a>
                   </li>
                 </ul>
               </div>
@@ -180,8 +180,8 @@
         <!-- About -->
 
 
-        <!-- Uniqueness -->
-        <section class="uniqueness" id="uniqueness">
+        <!-- Penjelasan -->
+        <section class="penjelasan" id="penjelasan">
           <div class="row mb-2">
             <div class="col">
                 <h2 class="text-center text-light">Apa Makna Pancasila sebagai Dasar Negara?</h2>
@@ -260,11 +260,11 @@
           </div>
         </div>
         </section>
-        <!-- Uniqueness -->
+        <!-- Penjelasan -->
 
         
-        <!-- Spesies-->
-        <section class="spesies pb-4" id="spesies">
+        <!-- Rangkuman-->
+        <section class="rangkuman pb-4" id="rangkuman">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -352,7 +352,7 @@
                 </div>
             </div>
         </section>
-        <!-- Spesies-->
+        <!-- Rangkuman-->
 
 
         <!-- Footer -->
