Add penjelasan css

--- a/Pancasila.html
+++ b/Pancasila.html
@@ -23,7 +23,7 @@
             background: url(img/hip-square.png);
           }
 
-          .uniqueness {
+          .penjelasan {
             background: url(img/webb-dark.png);
             background-size: 100px;
           }
@@ -36,7 +36,7 @@
             border-top: 3px solid rgb(7, 7, 7);
           }
 
-          .uniqueness hr {
+          .penjelasan hr {
             border-top: 3px solid rgb(255, 255, 255);
           }
 
