--- a/Pancasila.html
+++ b/Pancasila.html
@@ -59,7 +59,7 @@
           }
 
           p {
-            font-family: 'Times New Roman', Times, serif;
+            font-family: 'Times New Roman', 'sans-serif';
           }
 
           video {
