--- a/Pancasila.html
+++ b/Pancasila.html
@@ -80,7 +80,7 @@
           }
 
           .text-about {
-            font-size: x-large;
+            font-size: 21px;
           }
         </style>
 
@@ -99,7 +99,7 @@
                   <li class="nav-item">
                     <a class="nav-link active mx-2" aria-current="page" href="#home">Home</a>
                   </li>
-                  <li class="nav-item mx-2">
+                  <li class="nav-item mx-3">
                     <a class="nav-link" href="#about">About</a>
                   </li>
                   <li class="nav-item mx-2">
@@ -159,9 +159,9 @@
                         <hr>
                     </div>
                     
-                    <div class="row fs-5">
+                    <div class="row fs-6">
                       <div class="text-about">
-                          <div class="text-center">
+                          <div class="text-center px-4">
                               <p><strong>Selamat datang di MyWebsite!</strong> Website ini dibuat 
                                 dengan tujuan untuk memberikan informasi dan solusi yang bermanfaat bagi para pengunjung. 
                                 Kami menyediakan berbagai macam informasi tentang Pancasila sebagai dasar negara.
