Fix button warna

--- a/Pancasila.html
+++ b/Pancasila.html
@@ -69,7 +69,7 @@
           }
 
           .accordion-button {
-            background-color: #0A2647;
+            background-color: #104f98;
             color: aliceblue;
             border: 2px solid;
           }
