--- a/Pancasila.html
+++ b/Pancasila.html
@@ -163,7 +163,7 @@
                       <div class="text-about">
                           <div class="text-center px-4">
                               <p><strong>Selamat datang di MyWebsite!</strong> Website ini dibuat 
-                                dengan tujuan untuk memberikan informasi dan solusi yang bermanfaat bagi para pengunjung. 
+                                dengan tujuan sebagai sarana edukasi dan memberikan informasi yang bermanfaat bagi para pengunjung. 
                                 Kami menyediakan berbagai macam informasi tentang Pancasila sebagai dasar negara.
                                 Kami juga menyediakan fitur gambar dan video, sehingga para pengunjung tidak bosan untuk melihat informasi atau untuk belajar. <br><br>
                                 Kami berupaya untuk selalu menyediakan informasi yang akurat, serta memberikan solusi yang inovatif dan efektif. 
